clang/test/BSC/Negative/OwnedStruct/tag-name/tag-name.cbs
// RUN: %clang_cc1 -verify %s

_Owned struct A;

_Owned struct A {};
_Owned struct A a; // expected-error {{must ignore '_Owned struct' tag before struct name}}
                  // expected-error@-1 {{type of global variable cannot be qualified by '_Owned'}}
struct B{
    _Owned struct A b;// expected-error {{must ignore '_Owned struct' tag before struct name}}
};

_Owned struct C {
    _Owned struct A b; // expected-error {{must ignore '_Owned struct' tag before struct name}}
};

_Owned struct A ff() { // expected-error {{must ignore '_Owned struct' tag before struct name}}
    A b; // ok
    return b;
}

int _Owned struct A::f() { // expected-error {{type of 'int' cannot be qualified by '_Owned'}}  expected-error {{must ignore '_Owned struct' tag before struct name}}
    return 0;
}

int A::g(_Owned struct A* this) { // expected-error {{must ignore '_Owned struct' tag before struct name}}
    return 0;
}

struct D;

_Owned struct D {};// expected-error {{inconsistent tag before struct name}}

int main() {
    _Owned struct A b; // expected-error {{must ignore '_Owned struct' tag before struct name}}
    _Owned struct B bb; // expected-error {{type of 'struct B' cannot be qualified by '_Owned'}}
    return 0;
}